Troca de array de posições X e Y para Deque<Point>